gibt-es-gott/52-httproute-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gibt-es-gott
  namespace: gibt-es-gott
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-white-fm
  hostnames:
    - gibt-es-gott.white.fm
  rules:
    - backendRefs:
        - name: gibt-es-gott
          port: 80
