gibt-es-gott/53-httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gibt-es-gott-internal
  namespace: gibt-es-gott
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - gibt-es-gott.internal.white.fm
  rules:
    - backendRefs:
        - name: gibt-es-gott
          port: 80
